# stemtool

./: README.md  pyproject.toml  setup.py
docs/examples/: ImageSimulation.ipynb
stemtool/afit/: atom_positions.py  drift_corr.py
stemtool/dpc/: atomic_dpc.py
stemtool/gpa/: gpa.py
stemtool/nbed/: nbed_strain.py
stemtool/sim/: multislice.py
stemtool/util/: gauss_utils.py  image_utils.py  pnccd.py
