[tool.poetry]
name = "STEMTool"
version = "0.535"
description = "A single package for analyzing atomic resolution STEM, 4D-STEM and STEM-EELS datasets, along with basic STEM simulation functionality"
authors = ["Debangshu Mukherjee <mukherjeed@ornl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyfftw = "^0.13.0"
scipy = "^1.10.0"
numpy = "^1.20.0"
pywavelets = "^1.0.0"
matplotlib = "^3.7.0"
pillow = "^9.2.1"
numba = "^0.57.0"
scikit-image = "^0.21.0"
matplotlib-scalebar = "^0.8.0"
ase = "^3.22.0"
h5py = "^3.0.0"
dask = "^2023.5.1"
nptyping = "^2.5.0"
zarr = "^2.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
